<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".MainActivityFragment">

    <!--Server (name or IP) and port-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_server"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/server_hint"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:text="@string/server_default"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:padding="5dp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/txt_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_rectangle"
            android:padding="5dp"
            android:text="@string/port_hint"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginRight="-5dp"
            android:layout_marginEnd="-5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <!--Buttons-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Spinner
            android:id="@+id/spn_methods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:entries="@array/coap_methods"
            />

        <RadioGroup
            android:id="@+id/rad_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/spn_methods"
            android:layout_toEndOf="@+id/spn_methods"
            android:layout_centerVertical="true"
            >

            <RadioButton
                android:id="@+id/rad_con"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/con_label"/>

            <RadioButton
                android:id="@+id/rad_non"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_label"/>

        </RadioGroup>

        <CheckBox
            android:id="@+id/chk_observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/obs_label"/>

    </RelativeLayout>

    <!--Service-->
    <AutoCompleteTextView
        android:id="@+id/txt_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/service_hint"
        android:background="@drawable/rounded_rectangle"
        android:padding="5dp"
        android:completionThreshold="1"
    />

    <!--Title Options-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:background="@drawable/line"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/rectangle"
            android:textColor="#000000"
            android:text="@string/request_options_label"
        />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="2px"
            android:layout_gravity="center_vertical"
            android:background="@drawable/line"
            />

    </LinearLayout>

    <!--Make the rest scrollable-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Options-->
            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2">

                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/ifmatch_no"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/ifmatch_label"
                        android:padding="5dp"
                        />
                    <EditText
                        android:id="@+id/txt_ifmatch"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_rectangle"
                        android:hint="@string/undefined"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/etag_no"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/etag_label"
                        android:padding="5dp"
                        />
                    <EditText
                        android:id="@+id/txt_etag"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_rectangle"
                        android:hint="@string/undefined"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/ifnonematch_no"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/ifnonematch_label"
                        android:padding="5dp"
                        />
                    <CheckBox
                        android:id="@+id/chk_ifnonematch"
                        android:layout_marginBottom="5dp"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/contentformat_no"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/contentformat_label"
                        android:padding="5dp"
                        />
                    <EditText
                        android:id="@+id/txt_contenttype"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_rectangle"
                        android:hint="@string/undefined"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/accept_no"
                        />
                    <TextView
                        android:text="@string/accept_label"
                        android:layout_gravity="center_vertical"
                        android:padding="5dp"
                        />
                    <EditText
                        android:id="@+id/txt_accept"
                        android:padding="5dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/rounded_rectangle"
                        android:hint="@string/undefined"
                        />
                </TableRow>
            </TableLayout>

            <!-- Payload -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_payload_label"
                    android:background="@drawable/rectangle"
                    android:textColor="#000000"
                    android:padding="5dp"
                    />

                <EditText
                    android:id="@+id/txt_payload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:background="@null"
                    android:hint="@string/payload_undefined"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
